to force travis to recompile

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Pachi can refer to: a simple modular framework for programs playing
+CHANGE Pachi can refer to: a simple modular framework for programs playing
 the game of Go/Weiqi/Baduk, and a reasonably strong engine built
 within this framework.
 
